test/typecheck/errors/method-call-wrong-type.boa
o: output sum of int;
o << 0;

s: stack of int;
push(s, s);
